# Allpix_GaAs

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: AllpixMacros.cmake  tools.cmake
doc/: CMakeLists.txt  index.md
doc/javascripts/: extra.js
doc/overrides/assets/stylesheets/: _arithmatex.scss  _base.scss  main.a32019b5.min.css  main.a32019b5.min.css.map  overrides.76317e44.min.css  pdf.css  styles.scss
doc/overrides/assets/stylesheets/overrides/layout/127.0.0.1%3a8000/assets/stylesheets/: main.a32019b5.min.css
doc/overrides/assets/stylesheets/overrides/layout/localhost%3a8000/assets/stylesheets/: main.a32019b5.min.css  main.a32019b5.min.css%3flivereload=1600267275464
doc/overrides/assets/stylesheets/overrides/layout/project-allpix-squared.web.cern.ch/project-allpix-squared/css/: main.css
doc/overrides/assets/stylesheets/overrides/layout/sabitar.gitlab.io/allpix/assets/stylesheets/: main.a32019b5.min.css
doc/overrides/assets/stylesheets/overrides/layout/squidfunk.github.io/mkdocs-material/assets/stylesheets/: main.4dd2dd8d.min.css
doc/overrides/overrides/: home.html  main.html
doc/reference/: Doxyfile.in  DoxygenLayout.xml  README.md  extrastylesheet.css  header.html  style.css
doc/stylesheets/: pdf.css
doc/usermanual/: acknowledgements.md  additional.md  allpix-manual.tex  development.md  examples.md  faq.md  framework-error-reporting-exceptions.md  framework-geometry-detectors.md  framework-logging-other-utilities.md  framework-modules-manager.md  framework-multithreading.md  framework-passing-objects-using-messages.md  framework-redirect-module-inputs-outputs.md  framework.md  getting_started.md  installation.md  introduction.md  modules.md  objects.md  quick_start.md  references.bib  scope.md  testing.md
doc/usermanual/chapters/: acknowledgements.tex  framework.tex  getting_started.tex  models.tex  testing.tex
doc/usermanual/tutorials/: tutorials-overview.md
etc/unittests/: CMakeLists.txt
examples/: CMakeLists.txt
examples/tcad_field_simulation/: README.md
src/core/: Allpix.cpp  CMakeLists.txt
src/core/geometry/: Detector.cpp  Detector.hpp  DetectorField.hpp  DetectorField.tpp  DetectorModel.cpp  DetectorModel.hpp  GeometryManager.cpp
src/core/module/: ModuleManager.cpp
src/core/utils/: log.cpp  log.h  text.tpp
src/modules/CapacitiveTransfer/: CapacitiveTransferModule.cpp
src/modules/DepositionBichsel/: CMakeLists.txt  DepositionBichsel.cpp  DepositionBichselModule.cpp  DepositionBichselModule.hpp  MazziottaIonizer.cpp  MazziottaIonizer.hpp  Particle.hpp  PhotoAbsorptionIonizer.cpp  PhotoAbsorptionIonizer.hpp  README.md
src/modules/DepositionGeant4/: ActionInitializationG4.hpp  DepositionGeant4Module.cpp
src/modules/DetectorHistogrammer/: DetectorHistogrammerModule.cpp  DetectorHistogrammerModule.hpp  README.md
src/modules/DopingProfileReader/: DopingProfileReaderModule.cpp  DopingProfileReaderModule.hpp  README.md
src/modules/ElectricFieldReader/: ElectricFieldReaderModule.cpp  ElectricFieldReaderModule.hpp  README.md
src/modules/ElectricFieldReader/tests/: 08-mesh_mapping_quadrant.conf  11-mesh_scale.conf
src/modules/GenericPropagation/: GenericPropagationModule.cpp  GenericPropagationModule.hpp  README.md
src/modules/GeometryBuilderGeant4/: DetectorConstructionG4.cpp  README.md
src/modules/InjectMessage/: CMakeLists.txt  InjectMessageModule.cpp  InjectMessageModule.hpp  README.md
src/modules/ProjectionPropagation/: README.md
src/modules/PulseTransfer/: PulseTransferModule.cpp
src/modules/ROOTObjectWriter/: ROOTObjectWriterModule.cpp
src/modules/SimpleTransfer/: SimpleTransferModule.cpp  SimpleTransferModule.hpp
src/modules/SimpleTransfer/tests/: 02-implant.conf
src/modules/TransientPropagation/: README.md  TransientPropagationModule.cpp  TransientPropagationModule.hpp
src/modules/VisualizationGeant4/: VisualizationGeant4Module.cpp
src/modules/WeightingPotentialReader/: README.md  WeightingPotentialReaderModule.cpp
src/objects/: Pixel.cpp  Pixel.hpp
tools/: CMakeLists.txt
tools/data/: sample_field.dat.md5  sample_field.grd.md5
tools/tests/: convert.conf
tools/weightingpotential_generator/: WeightingPotentialGenerator.cpp
